[package]
name = "mparse"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
rand = {version = "0.10.1", optional = true}
clap = {version = "4", features = ["derive"], optional = true}

[[bin]]
name = "mparse"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["rand"]
rand = ["dep:rand"]
cli = ["dep:clap"]

[profile.release]
debug = "full"
